2008-03-16 [colin]	1.101.0cvs16

	* src/month-view.c
		Better height allocation

2008-03-16 [colin]	1.101.0cvs15

	* src/month-view.c
		Require at least 250px vertical

2008-03-16 [colin]	1.101.0cvs14

	* src/common-views.c
	* src/common-views.h
	* src/day-view.c
	* src/month-view.c
	* src/vcal_meeting_gtk.c
		Add context menus
		Harmonize both views callbacks

2008-03-15 [colin]	1.101.0cvs13

	* src/Makefile.am
	* src/common-views.c
	* src/common-views.h
	* src/day-view.c
	* src/month-view.c
	* src/vcalendar.h
		Factorize stuff a bit

2008-03-14 [colin]	1.101.0cvs12

	* src/month-view.c
		Fix warning

2008-03-13 [colin]	1.101.0cvs11

	* src/day-view.c
		Fix alignment, ellipsize
	* src/month-view.c
		Ellipsize

2008-03-13 [colin]	1.101.0cvs10

	* src/day-view.c
	* src/month-view.c
		Fix display of todos (which have no DTEND)

2008-03-13 [colin]	1.101.0cvs9

	* src/day-view.c
	* src/vcal_folder.c
		Fix flicker and scroll in week view
		Always put 'Today' in the message list

2008-03-12 [colin]	1.101.0cvs8

	* configure.ac
		Enable -Wall
	* src/day-view.c
	* src/month-view.c
	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
	* src/vcal_meeting_gtk.h
	* src/vcal_prefs.c
	* src/vcalendar.c
		Fix warnings
		Fix little bugs in month view
		Move calendar when moving across meetings
		with View/Go To/Previous/Next 

2008-03-12 [colin]	1.101.0cvs7

	* src/vcal_folder.c
		Allow item_opened to refresh if needed

2008-03-12 [colin]	1.101.0cvs6

	* src/vcal_folder.c
	* src/vcal_prefs.c
	* src/vcal_prefs.h
		Make the view type a folder-specific property

2008-03-11 [colin]	1.101.0cvs5

	* po/POTFILES.in
		Add new files
	* src/Makefile.am
	* src/month-view.c
		Add month view
	* src/day-view.c
		Fix some little things
	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_manager.c
	* src/vcal_manager.h
	* src/vcal_prefs.c
	* src/vcal_prefs.h
	* src/vcalendar.c
		- Add a way to get internal representation of
		  ical components easily