@@ -1,3 +1,9 @@
+2008-03-18 [colin]	1.101.0cvs17
+
+	* src/vcal_folder.c
+		Make sure we have an item before
+		updating it.
+
 2008-03-16 [colin]	1.101.0cvs16
 
 	* src/month-view.c
